# Shellow

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml  release-mobile.yml
apps/android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/app/src/androidTest/java/xyz/zinglix/shellow/: ShellowApplicationIdTest.kt
apps/android/app/src/debug/res/values/: strings.xml
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/cpp/: CMakeLists.txt  shellow_jni.cpp
apps/android/app/src/main/java/xyz/zinglix/shellow/: MainActivity.kt
apps/android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_monochrome.xml  ic_shellow_launcher_foreground.xml
apps/android/app/src/main/res/mipmap-anydpi-v26/: ic_shellow_launcher_round.xml
apps/android/app/src/main/res/values/: strings.xml  themes.xml
apps/android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
apps/android/app/src/test/java/xyz/zinglix/shellow/: PersistentTerminalTest.kt  (+3 more)
apps/android/gradle/: libs.versions.toml
apps/ios/Shellow/: AppShell.swift  AppTab.swift  ShellowApp.swift
apps/ios/Shellow.xcodeproj/: project.pbxproj
apps/ios/Shellow.xcodeproj/xcshareddata/xcschemes/: Shellow.xcscheme
apps/ios/Shellow/Assets.xcassets/AppIcon.appiconset/: Contents.json
apps/ios/Shellow/Bridge/: ShellowCoreBridge.swift
apps/ios/Shellow/Models/: HostProfile.swift  SSHSecretStore.swift  ShellowSettings.swift  TerminalSession.swift
apps/ios/Shellow/Views/: HostsScreen.swift  SettingsScreen.swift  TerminalMetalGridSurface.swift  TerminalScreen.swift
apps/web/: AGENTS.md  README.md  design-qa.md  index.html  package-lock.json  package.json  vite.config.mjs
apps/web/src/: App.jsx  styles.css
apps/web/src/components/: AnimatedBeam.jsx  BlurFade.jsx  BorderBeam.jsx  Iphone.jsx
crates/: README.md
crates/libghostty-vt-sys/: Cargo.toml  build.rs
crates/libghostty-vt-sys/src/: bindings.rs
crates/shellow-core/: Cargo.toml  build.rs
crates/shellow-core/assets/: README.md
crates/shellow-core/src/: claude.rs  codex.rs  ghostty_adapter.rs  integrations.rs  lib.rs  renderer.rs  ssh.rs  terminal_theme.rs
crates/shellow-ffi/: Cargo.toml
crates/shellow-ffi/include/: ShellowCore.h  module.modulemap
crates/shellow-ffi/src/: lib.rs
docs/: ARCHITECTURE.md  BUILDING.md  STORE_RELEASE_SETUP.md  STORE_RELEASE_SETUP.zh-CN.md  TERMINAL_CAPABILITIES.md
scripts/: build-android-rust.sh  build-ios-rust.sh  libghostty-vt-env.sh
(+8 files in other folders)
