[workspace]
members = [
    "crates/shellow-core",
    "crates/shellow-ffi",
]
exclude = ["crates/libghostty-vt-sys"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.96"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[patch.crates-io]
libghostty-vt-sys = { path = "crates/libghostty-vt-sys" }
